force-app/main/default/objects/Price_Check__c/Price_Check__c.object-meta.xml
<CustomObject>
    <description>Object used to display results for real-time call for customer-specific Price Check response from Cast Iron.</description>
    <label>Price Check</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Price Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>