force-app/main/default/objects/Price_Check__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>