force-app/main/default/objects/Price_Check__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Customer Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>