force-app/main/default/objects/Price_Check__c/fields/Price_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Check_Date__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Price Check Date</label>
    <type>DateTime</type>
</CustomField>