force-app/main/default/objects/Price_Check__c/fields/Price_List_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Code__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Price List Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>