force-app/main/default/objects/Price_Check__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Style Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>